--- a/css/main.css
+++ b/css/main.css
@@ -3,4 +3,10 @@
 body {
     padding: 1rem;
     font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    background-color: darkgray;
+    text-align: center;
+}
+h1{
+    color: blue;
 }
